# DeepNN

./: .gitignore  README.md  deepnn.py  main.py  pyproject.toml  trainer.py
