[tool.poetry]
name = "deepnn"
version = "0.1.0"
description = ""
authors = ["petmarco7 <marco.petrella7@libero.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.6.0"
matplotlib = "^3.10.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
